--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'propdeps-maven'
 apply plugin: 'kotlin'
 apply plugin: 'org.junit.platform.gradle.plugin'
 
-group = 'com.github.username'
+group = 'com.viartemev.ktlint'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
