--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ apply plugin: 'kotlin'
 apply plugin: 'org.junit.platform.gradle.plugin'
 
 group = 'com.viartemev.ktlint'
+version = '0.1'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
